<resources>
    <string name="app_name">RepairShop</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="login">login</string>

    <string name="userName">username</string>
    <!-- Admin -->>
    <string name="newServiceName">New service name</string>
    <string name="serviceName">Service name</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="newServiceCost">Service Cost</string>
    <string name="newServiceDuration">Service Duration</string>
    <string name="title_activity_create_service">Create Service</string>
    <string name="nav_create_service">Create</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <!-- Admin -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>