<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_admin_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_admin_service"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/nav_create_service"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_admin_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />
</menu>
